--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^3.0.1",
+        "sass": "^1.54.0",
+        "sass-loader": "^13.0.2",
         "vue": "^3.2.37"
     }
 }
