--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "animejs": "^3.2.1",
         "sass": "^1.54.0",
         "sass-loader": "^13.0.2",
-        "vue": "^3.2.37"
+        "vue": "^3.2.37",
+        "vue-select": "^4.0.0-beta.3"
     }
 }
